# autopytest

./: .codacy.yml  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  qodana.yaml  tox.ini
.github/workflows/: lint.yml  python-publish.yml  qodana.yml  release-please.yml  tests.yml
autopytest/: __init__.py  autotest.py  cli.py  config.py  file.py  pytest_runner.py  source.py  strategy.py
autopytest/commands/: init_command.py
autopytest/runners/: pytest.py
autotest/: __init__.py  __main__.py  autotest.py  config.py  pytest_runner.py
autotest/cli/: main.py
fixtures/library_pkg/: pyproject.toml
scripts/: coverage-format.sh  coverage.sh
tests/: test_autotest.py  test_cli.py  test_config.py  test_file.py  test_source.py  test_strategy.py
tests/fixtures/application/: pyproject.toml
tests/fixtures/library_src/: pyproject.toml
tests/runners/: test_pytest.py
