[project]
name = "autopytest"
version = "0.0.5"
description = "Autotest python code"
authors = [
  { name = "David Rice", email = "me@davidjrice.co.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "watchdog==3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/davidjrice/autotest"
"Bug Tracker" = "https://github.com/davidjrice/autotest/issues"

[project.scripts]
autopytest = "autopytest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = [
  ".venv",
]
pretty = true

[tool.ruff]
cache-dir = ".cache/ruff"
fix = true
line-length = 120
select = ["ALL"]
ignore = [
  "ANN101", # missing-type-self
  "ANN102", # missing-type-cls
  "D",      # pydocstyle
  "G004",   # logging-f-string
  "S101",   # use-of-assert-detected
  "PT019",  # pytest-fixture-param-without-value
]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["autotest", "tests"]